# agame

./: CMakeLists.txt  Makefile  README.md  main.c  sprites.h
include/: entity.h  macro_definitions.h  maze.h  sprites.h  state.h  util.h
include/entity/: enemy.h  enemy_spawner.h  entity.h  light.h  pew.h  player.h
include/event/: event.h
internal/: cleanup_functions.h  draw_misc.h  graph.h  macro_definitions.h  sprites.h
internal/structs/: arraylist.h  astack.h  linkedlist.h  pqueue.h  queue.h
src/: entity.c  maze.c  state.c  util.c
src/entity/: enemy.c  enemy_spawner.c  entity.c  light.c  player.c  spawner.c
src/event/: event.c
